--- a/source/sass/blocks/advantage-with-photo.scss
+++ b/source/sass/blocks/advantage-with-photo.scss
@@ -17,7 +17,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .advantage-with-photo {
     display: flex;
     padding-top: 0;
