--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -47,7 +47,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .advantage {
     padding: 44px 45px 30px 45px;
     min-height: 256px;
@@ -65,7 +65,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .advantage--primary {
     padding-top: 51px;
   }
