--- a/source/sass/blocks/form-page-intro.scss
+++ b/source/sass/blocks/form-page-intro.scss
@@ -22,7 +22,7 @@
   margin: 27px 0 0 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .form-page-intro {
     padding-top: 72px;
     padding-bottom: 30px;
@@ -41,7 +41,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .form-page-intro {
     padding-top: 110px;
     padding-bottom: 13px;
