--- a/source/sass/blocks/promo-video.scss
+++ b/source/sass/blocks/promo-video.scss
@@ -28,7 +28,7 @@
   margin-top: 35px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .promo-video {
     padding-top: 64px;
   }
@@ -53,7 +53,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .promo-video {
     padding-top: 68px;
     padding-bottom: 88px;
