--- a/source/sass/blocks/radio-input-list.scss
+++ b/source/sass/blocks/radio-input-list.scss
@@ -2,7 +2,7 @@
   margin-top: 13px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .radio-input-list__item {
     margin-top: 21px;
   }
