--- a/source/sass/blocks/small-city-benefits.scss
+++ b/source/sass/blocks/small-city-benefits.scss
@@ -44,7 +44,7 @@
   color: $black;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .small-city-benefits {
     padding: 0;
   }
@@ -87,7 +87,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .small-city-benefits__item {
     padding: 158px 50px 69px 50px;
   }
