--- a/source/sass/blocks/text-input.scss
+++ b/source/sass/blocks/text-input.scss
@@ -95,7 +95,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $min-tablet-width) {
   .text-input--email {
     margin-top: 25px;
   }
@@ -105,7 +105,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .text-input--email {
     width: 502px;
 
