--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -13,7 +13,7 @@ body {
   box-sizing: border-box;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $max-mobile-width) {
   .mobile-hidden {
     display: none;
   }
@@ -27,7 +27,7 @@ body {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
+@media (min-width: $min-tablet-width) and (max-width: $max-tablet-width) {
   .only-desktop {
     display: none;
   }
@@ -37,7 +37,7 @@ body {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $min-desktop-width) {
   .only-mobile {
     display: none;
   }
