переписал media-запросы миксинами
полезность сомнительная, скорее ради эксперимента

--- a/source/sass/blocks/advantage-with-photo.scss
+++ b/source/sass/blocks/advantage-with-photo.scss
@@ -17,7 +17,7 @@
   }
 }
 
-@media (min-width: $min-tablet-width) {
+@include for-tablet-and-desktop {
   .advantage-with-photo {
     display: flex;
     padding-top: 0;
