--- a/source/sass/blocks/find-apartment-suggestion.scss
+++ b/source/sass/blocks/find-apartment-suggestion.scss
@@ -27,7 +27,7 @@
   padding: 15px 0 17px 0;
 }
 
-@media (min-width: $min-tablet-width) {
+@include for-tablet-and-desktop {
   .find-apartment-suggestion {
     padding-top: 24px;
     padding-bottom: 58px;
@@ -44,7 +44,7 @@
   }
 }
 
-@media (min-width: $min-desktop-width) {
+@include for-desktop {
   .find-apartment-suggestion {
     padding-bottom: 64px;
   }
