--- a/source/sass/blocks/site-banner-small.scss
+++ b/source/sass/blocks/site-banner-small.scss
@@ -10,7 +10,7 @@
     background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@2x.jpg");
   }
 
-  @media (min-width: $min-tablet-width) {
+  @include for-tablet {
     height: 290px;
     background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
     background-size: 768px auto, 768px 518px;
@@ -20,7 +20,7 @@
     }
   }
 
-  @media (min-width: $min-desktop-width) {
+  @include for-desktop {
     height: 301px;
     background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
     background-size: 1200px auto, 1200px 518px;
@@ -36,12 +36,12 @@
   margin: 50px auto 0 auto;
   display: block;
 
-  @media (min-width: $min-tablet-width) {
+  @include for-tablet-and-desktop {
     width: 460px;
     margin-top: 94px;
   }
 
-  @media (min-width: $min-desktop-width) {
+  @include for-desktop {
     margin-top: 101px;
   }
 }
