--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -13,7 +13,7 @@ body {
   box-sizing: border-box;
 }
 
-@media (max-width: $max-mobile-width) {
+@include for-mobile {
   .mobile-hidden {
     display: none;
   }
@@ -37,7 +37,7 @@ body {
   }
 }
 
-@media (min-width: $min-desktop-width) {
+@include for-desktop {
   .only-mobile {
     display: none;
   }
