черновая версия модальных окон

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,3 +32,4 @@
 @import "./blocks/checkbox-input-list";
 @import "./blocks/visually-hidden";
 @import "./blocks/like-counter";
+@import "./blocks/modal";
