--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $section-side-padding: 20px;
 $section-side-padding--tablet: 60px;
 $section-side-padding--desktop: 120px;
 
+$min-mobile-width: 320px;
 $min-tablet-width: 768px;
 $max-mobile-width: $min-tablet-width - 1px;
 $min-desktop-width: 1200px;
