--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,9 @@
 .button {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 58px;
+  padding: 0 20px;
   background-color: $light-grey-blue;
 
   font-size: 21px;
