--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -39,7 +39,7 @@ body.modal-is-open {
   line-height: 1.71;
   color: #333333;
   padding: 0 50px 35px 50px;
-  margin-top: 20px;
+  margin-top: 28px;
 }
 
 .modal__footer {
@@ -56,6 +56,7 @@ body.modal-is-open {
   font-size: 18px;
   font-weight: bold;
   line-height: 1.44;
+  text-transform: uppercase;
 
   &--small {
     width: 180px;
@@ -67,12 +68,29 @@ body.modal-is-open {
 }
 
 @include for-tablet-and-desktop {
+  .modal--success .modal__inner {
+    width: 640px;
+  }
+
+  .modal--error .modal__inner {
+    width: 400px;
+  }
+
   .modal__header {
     font-size: 30px;
-    line-height: 1.33;
+    line-height: 40px;
   }
-}
 
-@include for-desktop {
+  .modal__button {
+    font-size: 21px;
+    line-height: 26px;
 
+    &--small {
+      width: 272px;
+    }
+  }
+
+  .modal__footer {
+    padding: 44px 91px;
+  }
 }
