--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -24,7 +24,6 @@
 }
 
 .site-nav__item {
-  // TODO тени скопированные из zeplin выглядят явно не так как в макете
   box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
   background-color: $light-grey-blue;
   text-align: center;
@@ -36,6 +35,7 @@
     align-items: center;
     justify-content: center;
     min-height: 56px;
+    height: 0; //костыль для IE 11
     display: flex;
 
     font-size: 18px;
@@ -43,7 +43,7 @@
     line-height: 40px;
     color: inherit;
     text-decoration: none;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.2); // TODO заменить цвет на правильный
+    border-bottom: solid 1px rgba(0, 0, 0, 0.2);
   }
 
   &:first-of-type {
@@ -78,6 +78,7 @@
 
   a {
     border: none;
+    height: auto;
   }
 
   img {
@@ -178,9 +179,9 @@
   .site-nav__list {
     display: flex;
     position: relative;
-    bottom: unset;
-    left: unset;
-    right: unset;
+    bottom: auto;
+    left: auto;
+    right: auto;
   }
 
   .site-nav__item {
@@ -227,7 +228,7 @@
   .site-nav__item--site-logo {
     flex-grow: 1;
     transform: none;
-    position: initial;
+    position: static;
 
     a {
       padding: 0;
