--- a/source/sass/blocks/text-input.scss
+++ b/source/sass/blocks/text-input.scss
@@ -27,7 +27,7 @@
     color: #000000;
 
     &::placeholder {
-      color: rgba(0, 0, 0, 0.3); // TODO проверить что это нужно
+      color: rgba(0, 0, 0, 0.3);
     }
 
     &:hover {
