--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -64,13 +64,13 @@
   line-height: 1.44;
   padding: 11px 18px;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #e5e5e5;
     border-color: #e5e5e5;
   }
 
-  &:active,
-  &:focus {
+  &:active {
     background-color: white;
     border-color: #e5e5e5;
     outline: none;
