--- a/source/sass/blocks/player.scss
+++ b/source/sass/blocks/player.scss
@@ -52,8 +52,8 @@
 
   &::before {
     content: "";
-    height: 11px;
-    width: 11px;
+    height: 9px;
+    width: 9px;
     background-color: #ffffff;
     border-radius: 50%;
     margin: auto;
@@ -71,7 +71,8 @@
     fill: #5c6870;
   }
 
-  &:hover svg {
+  &:hover svg,
+  &:focus svg {
     fill: rgb(51, 51, 51);
   }
 
