--- a/source/sass/blocks/site-banner-big.scss
+++ b/source/sass/blocks/site-banner-big.scss
@@ -1,17 +1,21 @@
 .site-banner-big {
-  height: 389px;
-  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-color: #7f8d99;
   background-position: center bottom;
-  background-size: 768px auto, 768px 389px;
   background-repeat: no-repeat;
   overflow: hidden;
 
-  @media (min-resolution: 1.5dppx) {
-    background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@2x.jpg");
+  @include for-mobile {
+    height: 389px;
+    background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+    background-size: 768px auto, 768px 389px;
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@2x.jpg");
+    }
   }
 
   @include for-tablet {
-    height: 518px;
+    height: 517px;
     background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
     background-size: 768px auto, 768px 518px;
 
@@ -21,7 +25,7 @@
   }
 
   @include for-desktop {
-    height: 518px;
+    height: 517px;
     background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
     background-size: 1200px auto, 1200px 518px;
 
@@ -33,6 +37,7 @@
 
 .site-banner-big__content {
   width: 281px;
+  height: auto;
   margin: 89px auto 0 auto;
   display: block;
 
