--- a/source/sass/blocks/switch-input.scss
+++ b/source/sass/blocks/switch-input.scss
@@ -5,7 +5,14 @@
   align-items: center;
 
   input {
-    display: none;
+    &:hover + label::before,
+    &:focus + label::before {
+      background-color: #e5e5e5;
+    }
+
+    &:active + label::before {
+      background-color: #d5d5d5;
+    }
   }
 
   label {
@@ -31,14 +38,6 @@
       left: 0;
       background-color: #f2f2f2;
       border-radius: 5px;
-    }
-
-    &:hover::before {
-      background-color: #e5e5e5;
-    }
-
-    &:active::before {
-      background-color: #d5d5d5;
     }
   }
 }
