--- a/source/sass/blocks/site-banner-small.scss
+++ b/source/sass/blocks/site-banner-small.scss
@@ -1,32 +1,60 @@
 .site-banner-small {
+  position: relative;
   height: 158px;
-  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-position: center bottom;
-  background-size: 768px auto, 768px 389px;
+  background-size: 768px 389px;
   background-repeat: no-repeat;
-  overflow: hidden;
 
   @media (min-resolution: 1.5dppx) {
-    background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
   }
 
   @include for-tablet {
     height: 290px;
-    background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
-    background-size: 768px auto, 768px 518px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-size: 768px 518px;
 
     @media (min-resolution: 1.5dppx) {
-      background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
     }
   }
 
   @include for-desktop {
     height: 301px;
-    background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
-    background-size: 1200px auto, 1200px 518px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-size: 1200px 518px;
 
     @media (min-resolution: 1.5dppx) {
-      background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@2x.jpg");
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    right: 0;
+    height: 45px;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+
+    @include for-mobile {
+      background-image: url("../img/bg-intro-triangle-mobile.svg");
+      background-size: 101% auto;
+    }
+
+    @include for-tablet {
+      height: 65px;
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+      background-size: 100% auto;
+    }
+
+    @include for-desktop {
+      height: 517px;
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+      background-size: 1200px auto;
     }
   }
 }
@@ -34,15 +62,16 @@
 .site-banner-small__content {
   width: 229px;
   height: auto;
-  margin: 50px auto 0 auto;
+  margin: 0 auto;
   display: block;
+  padding-top: 50px;
 
   @include for-tablet-and-desktop {
     width: 460px;
-    margin-top: 94px;
+    padding-top: 94px;
   }
 
   @include for-desktop {
-    margin-top: 101px;
+    padding-top: 101px;
   }
 }
