--- a/source/sass/blocks/site-banner-small.scss
+++ b/source/sass/blocks/site-banner-small.scss
@@ -5,6 +5,7 @@
   background-position: center bottom;
   background-size: 768px 389px;
   background-repeat: no-repeat;
+  background-color: #525d69;
 
   @media (min-resolution: 1.5dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
